model Game {
	id			Int	@id @default(autoincrement()) @unique
	uid			String	@unique
	is_private	Boolean	@default(false)
	created_at	DateTime @default(now())
	started_at	DateTime?
	end_at		DateTime?
	gamePlayer 	GamePlayer[]

	@@map("games")
}

model GamePlayer {
	player_id	Int
	game_id		Int
	score		Int @default(0)
	side		Int @default(0)
	is_win		Boolean?
	is_spec		Boolean?
	player		User	@relation(fields: [player_id], references: [id])
	game		Game	@relation(fields: [game_id], references: [id], onDelete: Cascade)

	@@id([player_id, game_id])
	@@map("game_players")
}
