enum RequestStatus {
	DECLINED
	PENDING
	ACCEPTED
}

model User {
	id				Int				@id @default(autoincrement())
	login			String 			@unique
	display_name	String			@unique
	email			String
	dAuth			Boolean 		@default(false)
	avatar			String
	secret			String?
	isOnline		Boolean			@default(false)
	created_at		DateTime 		@default(now())
	updated_at		DateTime 		@updatedAt
	last_login		DateTime 		@default(now())
	channelUser		ChannelUser[]


	user			Friends[]		@relation("user")
	friends			Friends[] 		@relation("friends")
	GamePlayer		GamePlayer[]
	directMessages	DirectMessage[]	@relation(name: "UserDirectMessages")
	blockedBy		Blocked[]		@relation("user")
	blockedUsers	Blocked[]		@relation("blocked")

	@@map("users")
}

model Friends {
	user_id		Int	
	friend_id	Int
	status		Int
	user		User			@relation("user", fields: [user_id], references: [id], onDelete: Cascade)
	friend		User			@relation("friends", fields: [friend_id], references: [id], onDelete: Cascade)

	@@id([user_id, friend_id])
	@@map("friends")
}

model Blocked {
	blocked_by_id		Int	
	blocked_id			Int
	blockedBy			User	@relation("user", fields: [blocked_by_id], references: [id], onDelete: Cascade)
	blocked				User	@relation("blocked", fields: [blocked_id], references: [id], onDelete: Cascade)

	@@id([blocked_by_id, blocked_id])
	@@map("blocked")
}
